deployment/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: localink
  labels:
    name: localink
    environment: production
    app: localink
